# testTaskMail_ru

./: README.md
task/: CMakeLists.txt  IVFS.h  VFS.cpp  VFS.h  main.cpp
task/VFS/FS/include/: ConstDefines.h  IVFS.h  RootName.h  StructFile.h  VFS.h
task/VFS/FS/src/: VFS.cpp
task/VFS/ManagerMetaFileInfo/include/: IManagerMeta.h  ManagerMeta.h
task/VFS/ManagerMetaFileInfo/src/: ManagerMeta.cpp
